<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#6F989494"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:background="#6F989494"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/messageAlert"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#6F989494"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button_shape"
            android:text="@string/Yes"
            android:layout_marginEnd="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
             />

        <Button
            android:id="@+id/buttonNo"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button_shape"
            android:text="@string/No"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>