<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <EditText
            android:id="@+id/UserName"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:hint="@string/yourphone"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/UserName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/UserName"
            app:layout_constraintTop_toBottomOf="@+id/UserName" />

        <EditText
            android:id="@+id/address"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:hint="@string/youraddress"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/phone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/phone"
            app:layout_constraintTop_toBottomOf="@+id/phone" />


        <EditText
            android:id="@+id/email"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:hint="@string/YourEmail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/address"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/address"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/passwordConfirm"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/PasswordReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/robotoregular"
            android:text="@string/Password_reminder"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/passwordConfirm"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirm"
            app:layout_constraintWidth_percent=".8" />

        <Button
            android:id="@+id/Sign_Up"
            android:layout_width="220dp"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/button_shape"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirm"
            app:layout_constraintVertical_bias="0.353"
            app:layout_constraintWidth_percent=".8" />

</androidx.constraintlayout.widget.ConstraintLayout>
